--- a/style.css
+++ b/style.css
@@ -80,7 +80,7 @@ input:focus {
 
 
 
-
+/* nps  */
 
 
 
@@ -102,4 +102,66 @@ input:focus {
     font-size: 14px;
       color: #777;
   }
+  
+
+
+  /* star ratings */
+
+  body {
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    background-color: #222;
+  }
+  
+  .ratingControl {
+    position: relative;
+    display: inline-flex;
+    direction: rtl;
+  }
+  .ratingControl__radio {
+    position: absolute;
+    height: 0;
+    width: 0;
+    opacity: 0;
+  }
+  .ratingControl__star {
+    position: relative;
+    display: block;
+    height: 48px;
+    width: 24px;
+    cursor: pointer;
+    overflow: hidden;
+  }
+  .ratingControl__star:nth-last-of-type(odd)::before, .ratingControl__star:nth-last-of-type(odd)::after {
+    left: 0;
+    -webkit-clip-path: polygon(50% 0%, 50% 70%, 21% 91%, 32% 57%, 2% 35%, 39% 35%);
+            clip-path: polygon(50% 0%, 50% 70%, 21% 91%, 32% 57%, 2% 35%, 39% 35%);
+  }
+  .ratingControl__star:nth-last-of-type(even)::before, .ratingControl__star:nth-last-of-type(even)::after {
+    right: 0;
+    -webkit-clip-path: polygon(50% 0%, 61% 35%, 98% 35%, 68% 57%, 79% 91%, 50% 70%);
+            clip-path: polygon(50% 0%, 61% 35%, 98% 35%, 68% 57%, 79% 91%, 50% 70%);
+  }
+  .ratingControl__star::before, .ratingControl__star::after {
+    content: "";
+    position: absolute;
+    top: 0;
+    height: 100%;
+  }
+  .ratingControl__star::before {
+    width: 200%;
+    background-color: #aaa;
+  }
+  .ratingControl__star::after {
+    background-color: #f2b600;
+  }
+  .ratingControl__star:hover::after, .ratingControl__star:hover ~ .ratingControl__star::after, .ratingControl__radio:checked ~ .ratingControl__star::after {
+    width: 200%;
+  }
+
+
+
+
   
