--- a/style.css
+++ b/style.css
@@ -1,8 +1,61 @@
-.container{
-    margin-top: 10%;
-
+:root{
+  --font-color: #ffffff;
+  --button-background-color: rgb(4, 69, 175);
 }
 
+body.blue{
+  --button-background-color: rgb(4, 69, 175);
+}
+
+body.green{
+  --button-background-color:green;
+}
+
+/* [data-theme="dark"] {
+  --background-color: #1b1b1b;
+  
+  --button-background-color: rgb(4, 69, 175);
+  --font-color: #yellow;
+  
+}
+
+[data-theme="light"] {
+  --background-color: white;
+  --button-background-color: #15a78a;
+  --font-color: #green;
+} */
+
+.box {
+  position:absolute;top:5%;left: 83%;
+  width: 120px;
+  height: 30px;
+  border: 1px solid #999;
+  font-size: 18px;
+  background-color: #eee;
+  border-radius: 5px;
+ 
+}
+
+.container{
+    margin-top: 3%;
+  background-color: #ffffff;
+      height: 450px;
+  padding: 3%;
+  overflow: auto;
+  border-radius: 7px;
+}
+
+body {
+    bottom: 0;
+  left: 0;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-image: url(https://image.syngentamail.com/lib/fe8c15737c62017b70/m/1/b3a0c29d-0227-49a8-8243-c2eb54478814.jpg)!important;
+  background-size: cover !important;
+  width: 100%;
+ 
+}
+   
 button:focus {
     outline: 0 !important;
     border: 0 !important;
@@ -20,6 +73,10 @@ input {
     margin: 5px 1px 3px 0px;
     border: 1px solid rgba(0, 0, 0, 0.086);
 }
+.list-group-item.active{
+  background-color: var(--button-background-color) !important;
+    border-color:var(--button-background-color) !important;
+}
 
 input:focus {
     outline: 1px !important;
@@ -31,8 +88,8 @@ input:focus {
 
 
 #okButton{
-    background-color: rgb(4, 69, 175);
-    color: rgb(255, 255, 255);
+    background-color:var(--button-background-color) ;
+    color: var(--font-color);
     border-radius: 4px;
     padding: 6px 14px;
     min-height: 40px;
@@ -40,16 +97,19 @@ input:focus {
 
 
 #previousQuestion,#nextQuestion{
-    background-color: rgb(4, 69, 175);
+    background-color:var(--button-background-color);
     width: 36px;
     min-width: 36px;
-    color: rgb(255, 255, 255);
+    color: var(--font-color);
     border-radius: 4px;
 
 }
+#previousQuestion{
+  margin-left: 43%;
+}
 
 .list-group-item .list-group-item-action .active{
-    background-color: rgb(4, 69, 175);
+    background-color: var(--button-background-color);
 }
 
 #savebuttoncontainer{
@@ -95,14 +155,14 @@ input:focus {
     cursor: pointer;
   }
   .rating-input-wrapper input[type="radio"]:checked ~ span {
-    background-color:  rgb(4, 69, 175);
-    color: #fff;
+    background-color:  var(--button-background-color);
+    color: var(--font-color);
   }
   .rating-labels > label{
     font-size: 14px;
       color: #777;
   }
-  
+ 
 
 
   /* star ratings */
@@ -114,7 +174,7 @@ input:focus {
     justify-content: center;
     background-color: #222;
   }
-  
+ 
   .ratingControl {
     position: relative;
     display: inline-flex;
@@ -159,9 +219,6 @@ input:focus {
   }
   .ratingControl__star:hover::after, .ratingControl__star:hover ~ .ratingControl__star::after, .ratingControl__radio:checked ~ .ratingControl__star::after {
     width: 200%;
-  }
+  }  
 
 
-
-
-  
