--- a/style.css
+++ b/style.css
@@ -35,11 +35,39 @@ body.green{
   border-radius: 5px;
  
 }
+.tagWithRadioTr{
+  background-color: rgb(187 203 229);
+  border-bottom: 4px solid #ffffff;
+}
 
+.tagWithRadioTr,.tagWithRadioTh{
+  padding: 10px;
+}
+
+
+.tagWithRadioTr>th:first-child {
+  border-radius: 10px 0 0 10px;
+}
+.tagWithRadioTr>td:last-child{
+  border-radius: 0 10px 10px 0;
+}
+.okSubmitButtons{
+  position: fixed !important;
+    bottom: 15%;
+    left: 77%;
+    z-index: 999;
+}
+
+::-webkit-scrollbar-thumb {
+	border: 6px solid #9b6a2f;
+	background: #e89a3e;
+	border-radius: 12px 12px 12px 12px;
+	margin: 0px auto;
+}
 .container{
     margin-top: 3%;
   background-color: #ffffff;
-      height: 450px;
+  height: 450px;
   padding: 3%;
   overflow: auto;
   border-radius: 7px;
@@ -122,9 +150,9 @@ input:focus {
 #footer {
     /* top: 0px;  you can delete these two lines if you want the position as it is */
     position:fixed;
-    margin-top: 0px;
-    width: 98%;
-    margin-bottom: 85px;
+    margin-top: 10px;
+    width: 100%;
+    margin-bottom: 20px;
 }
 
 @media screen and (min-width:500px){
@@ -141,11 +169,6 @@ input:focus {
 
 
 /* nps  */
-
-
-
-
-
 
 
   .rating-input-wrapper input[type="radio"] {
@@ -222,3 +245,50 @@ input:focus {
   }  
 
 
+
+/* Radio button Size */
+
+  input[type=radio] {
+    border: 0px;
+    width: 15%;
+    height: 1em;
+}
+
+input[type='radio']:checked:after {
+  width: 15px;
+  height: 15px;
+  border-radius: 15px;
+  top: -2px;
+  left: -1px;
+  position: relative;
+  background-color:var(--button-background-color);
+  content: '';
+  display: inline-block;
+  visibility: visible;
+  border: 2px solid white;
+}
+
+
+/* Scroll Bar Code   */
+
+.container::-webkit-scrollbar-thumb {
+  background-color: #495057;
+  border: 4px solid transparent;
+  border-radius: 8px;
+  background-clip: padding-box;  
+}
+
+.container::-webkit-scrollbar {
+  width: 16px;
+}
+
+.container {
+  overflow-y: scroll;
+  margin: 0;
+  padding: 0;
+  /* width: 350px;
+  max-height: 300px;
+  background-color: #ddd; */
+
+  border-radius: 8px;
+}
